--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -18,15 +18,18 @@
   </div>
   <ion-grid>
     <ion-row>
-      <ion-col><ion-input style="border-color:black;border-width:thin;border-style:solid;" [(ngModel)]="apiurl" placeholder="Enter api url"></ion-input></ion-col>
+      
+      <ion-col>API url:<ion-input style="border-color:black;border-width:thin;border-style:solid;" [(ngModel)]="apiurl" placeholder="Enter api url"></ion-input></ion-col>
     </ion-row>
       <br />
       <ion-row>
-      <ion-col><ion-input style="border-color:black;border-width:thin;border-style:solid;" [(ngModel)]="session" placeholder="Enter sessionid"></ion-input></ion-col>
+        
+      <ion-col>Session:<ion-input style="border-color:black;border-width:thin;border-style:solid;" [(ngModel)]="session" placeholder="Enter sessionid"></ion-input></ion-col>
     </ion-row>
       <br />
       <ion-row>
-      <ion-col><ion-input style="border-color:black;border-width:thin;border-style:solid;" [(ngModel)]="room" placeholder="Enter room"></ion-input></ion-col>
+        
+      <ion-col>Room:<ion-input style="border-color:black;border-width:thin;border-style:solid;" [(ngModel)]="room" placeholder="Enter room"></ion-input></ion-col>
 
     </ion-row>
     <ion-row>
